# agent-showcase

./: .gitignore  CODEOWNERS  GEMINI.md  README.md  pyproject.toml  vector-search-backend.md
01-build/: Dockerfile  README.md  app_server.py  architecture.md  deploy.py  pyproject.toml  requirements.txt
01-build/agents/: .env  agent.py  evaluator.py  planner.py  schemas.py  scout.py  scouts.py
01-build/agents/views/: plan.py  search.py
01-build/images/: backpack.avif  bike.avif  leather_journal.avif  necklace.avif
01-build/mcp/: server.py
01-build/src/01_build/: __init__.py
01-build/ui/: app.js  index.html  style.css
02-scale/: .env.template  .gcloudignore  DEVLOG.md  Dockerfile.control-room  Dockerfile.planner-a2a  README.md  TDD.md  app_server.py  cloudbuild-control-room.yaml  cloudbuild-execution-crew.yaml  cloudbuild-planner-a2a.yaml  deployment_metadata.json  pyproject.toml
02-scale/agents/config/: default_config.py  prompts.py
02-scale/agents/control_room/: a2a_server.py  agent.py  main.py
02-scale/agents/dispatcher/: agent.py
02-scale/agents/executor/: README.md  __init__.py  agent.py  requirements.txt
02-scale/agents/executor/src/: README.md  agents.py  crew.py  prompts.py  tasks.py  tools.py
02-scale/agents/planner/: README.md  a2a_server.py  agent.py  graph.py  prompts.py  state.py  test_a2a_client.py
02-scale/agents/planner/src/: a2a_server.py  state.py
02-scale/docs/: a2a_reference.md  adk_2_control_room_plan.md
02-scale/docs/images/: generate_arch_diagram.py
02-scale/mock_oms_mcp/: server.py
02-scale/scripts/: Dockerfile.control-room  Dockerfile.control-room-a2a  Dockerfile.execution-crew  Dockerfile.planner-a2a  build_patched_crewai_wheel.py  cloudbuild-control-room-a2a.yaml  cloudbuild-control-room.yaml  cloudbuild-execution-crew.yaml  cloudbuild-planner-a2a.yaml  deploy_control_room_a2a_cloud_run.sh  deploy_control_room_cloud_run.sh  deploy_planner_a2a_cloud_run.sh  deploy_to_agent_engine.py  setup_iam.sh  teardown.sh  warmup_agent_engines.py
02-scale/tests/: conftest.py
02-scale/tests/e2e/: test_cuj1_happy_path.py  test_cuj2_identity_shield.py  test_cuj3_replanning.py
02-scale/tests/integration/: test_a2a_server.py  test_control_room.py  test_executor_crew.py  test_identity_shield.py  test_planner_graph.py
02-scale/tests/unit/: test_default_config.py  test_executor_prompts.py  test_executor_tasks.py  test_mock_oms.py  test_planner_prompts.py
02-scale/ui/: app.js  demo_knowledge.md  index.html  style.css
02-scale/workshops/: index.lab.github.md  index.lab.md  workshop.md
03-govern/: pyproject.toml
03-govern/src/03_govern/: __init__.py
src/next26_agent_showcase/: __init__.py
vector-search-backend/: README.md  pyproject.toml  vector-search-backend.md
vector-search-backend/mcp/: README.md  server.py
vector-search-backend/mcp/search_agent/: agent.py
vector-search-backend/mcp/search_agent/.adk/: session.db
vector-search-backend/src/vector_search_backend/: __init__.py
