[project]
name = "next26-agent-showcase"
version = "0.1.0"
description = "Build, Scale and Govern demos for Google Cloud NeXT'26"
readme = "README.md"
authors = [
    { name = "Emmanuel Awa", email = "emmanuelawa@google.com" },
    { name = "Kaz Sato", email = "kazsato@google.com" },
    { name = "Sita Lakshmi Sangameswaran", email = "sitalakshmi@google.com" },
    { name = "Laxmi Harikumar", email = "laxmih@google.com" },
    { name = "Vinesh Prasanna M", email = "vineshpm@google.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = [
    "02-scale",
    "01-build",
    "03-govern",
    "vector-search-backend",
]
