[project]
name = "01-build"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Laxmi Harikumar", email = "laxmih@google.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
