[project]
name = "02-scale"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Emmanuel Awa", email = "emmanuelawa@google.com" },
    { name = "Kaz Sato", email = "kazsato@google.com" }
]
requires-python = ">=3.13"
dependencies = [
    "crewai[litellm]>=1.11.0",
    "crewai-tools>=1.11.0",
    "mcp[cli]>=1.26.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "mcpadapt>=0.1.20",
    "fastmcp>=3.1.1",
    "langgraph>=1.1.3",
    "langchain-core>=1.2.21",
    "pydantic>=2.11.10",
    "langchain-google-genai>=4.2.1",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
]
