[project]
name = "02-scale"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Emmanuel Awa", email = "emmanuelawa@google.com" },
    { name = "Kaz Sato", email = "kazsato@google.com" }
]
requires-python = ">=3.13"
dependencies = [
    "crewai[litellm]",
    "crewai-tools",
    "mcp[cli]>=1.26.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "mcpadapt>=0.1.20",
    "fastmcp>=3.1.1",
    "langgraph",
    "langchain-core>=1.2.21",
    "pydantic>=2.11.10",
    "langchain-google-genai>=4.2.1",
    "uvicorn>=0.42.0",
    "click>=8.1.8",
    "google-adk>=2.0.0a0",
    "httpx>=0.28.1",
    "a2a-server",
    "a2a-sdk>=0.3.25",
    # Tight band — patches only (1.146.x). 1.146 changed
    # `client.agent_engines.get(...)` to return a thin AgentEngine handle
    # without auto-wired session/query methods, and the lock file is part
    # of the workspace (not member-scoped), so we can't pin a single
    # transitive resolution from inside 02-scale alone. Keeping the
    # constraint narrow is the only defense against a passive `uv sync`
    # silently picking up the next API-breaking minor. Widen the upper
    # bound only after explicitly re-validating against a newer minor.
    "google-cloud-aiplatform>=1.146,<1.147",
]

[dependency-groups]
dev = [
    "pyright>=1.1.408",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.uv]
prerelease = "allow"
