[project]
name = "03-govern"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sita Lakshmi Sangameswaran", email = "sitalakshmi@google.com" },
    { name = "Vinesh Prasanna M", email = "vineshpm@google.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
